k8slab/k8s/appone/loadek/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadek
spec:
  selector:
    matchLabels:
      name: loadek
  template:
    metadata:
      labels:
        name: loadek
    spec:
      containers:
        - name: loadek
          image: swierq/golang:v0.0.1
          command: ["loadek", "-port", "8080", "-cpumi", "100", "-memmb", "150"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "200M"
              cpu: "100m"
            limits:
              memory: "200M"
