k8slab/k8s/appone/loadek/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadek
  labels:
    name: loadek
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    name: loadek
