k8slab/k8s/appone/loadek/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loadek
  annotations:

spec:
  rules:
    - http:
        paths:
          - path: /loadek
            pathType: Prefix
            backend:
              service:
                name: loadek
                port:
                  number: 8080
            path: /loadek(/|$)(.*)
